[project]
name = "weekly-dance-map"
version = "0.1.0"
description = "Open project to visualize latin dance socials that happen every week."
authors = [
    { name = "Tim", email = "tgordon523@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "streamlit>=1.41.1",
    "duckdb>=1.1.3",
    "watchdog>=6.0.0",
    "openpyxl>=3.1.5",
    "geopandas>=1.0.1",
    "plotly>=6.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/weekly_dance_map"]
